# irish-property-analysis

./: README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: download_bus_data.py  download_listings.py  download_ppr.py  download_school_data.py  get_property_details.py
src/irish_property_analysis/: bus_stops.py  constants.py  ppr_sale.py  rentals.py  sales.py  schools.py  settings.py  shares.py  utils.py
test/: test_ppr_sale.py  test_utils.py
